<resources>
    <string name="app_name">Torres de San Sebastian </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title2">San Sebastián</string>
    <string name="nav_header_title1">Torres de</string>
    <string name="nav_header_subtitle">Unidad Residencial - Medellin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="suggestion">Sugerencias</string>
    <string name="complaints">Denuncias</string>
    <string name="title_contact_us">Contactanos</string>
    <string name="menu_information">Información</string>
    <string name="menu_location">Ubicación</string>
    <string name="menu_suggestion">Sugerencias</string>
    <string name="menu_complaints">Denuncias</string>
    <string name="menu_contact_us">Horarios Atención y Contactos</string>
    <string name="menu_parking">Parqueadero Información</string>
    <string name="menu_admin_pay">Formas de Pago Administración</string>
    <string name="menu_pet_ownership">Tenencia de Mascotas</string>
    <string name="menu_repair">Reparaciones Locativas</string>
    <string name="menu_garbage">Disposición de la Basura</string>
    <string name="menu_playground">Zona de Juegos</string>
    <string name="menu_noise">Normatividad Ruido</string>
    <string name="menu_box_suggestion">Caja de Sugerencias</string>
    <string name="menu_schedule">Horario Atrención</string>
    <string name="menu_home">Principal</string>
    <string name="emails">Correos Electrónicos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_phones">Telefonos de Contacto</string>
    <string name="website">Página Web</string>
    <string name="presindente_consejo_label">Presidente Consejo:</string>
    <string name="unitName">Torres de San Sebastian</string>
    <string name="neighborhood">Barrio Colon</string>
    <string name="city">Medellín - Antioquia</string>
    <string name="direction">Carrera 46 # 41 - 16</string>
    <string name="title_contact_number">Numeros de Contactos</string>
    <string name="admin_number">Número de Administración:</string>
    <string name="administration_number">305 333 13 94</string>
    <string name="url_whatsap">https://wa.me/+57</string>
    <string name="phone_number">Número Administrador</string>
    <string name="phone_numbr">604 594 40 82</string>
    <string name="entrance_nbr">Número de Porteria:</string>
    <string name="entrance_number">310 581 55 57</string>
    <string name="title_contact_email">Correos Electrónicos</string>
    <string name="admin_email">Administrador:</string>
    <string name="administration_email">direcciontorressansebastian@gmail.com</string>
    <string name="aux_email">Auxiliar:</string>
    <string name="auxiliar_email">auxiliarurtss@gmail.com</string>
    <string name="presidente_consejo_email">presidenteconsejourtss@gmail.com</string>
    <string name="consejo_email_label">Consejo:</string>
    <string name="consejo_email">consejourtorressansebastian@gmail.com</string>
    <string name="country_whatsapp">+57</string>
    <string name="attention_schedule">Horario Atención</string>
    <string name="schedule_time">El Horario de la administradora: Lunes Y Viernes \n De 8:00 am a 11:30 pm , Jueves de 8:00 am a 2:30 pm, El primer y tercer sabado de cada mes de 8:00 am a 11:00 pm</string>
    <string name="note1_admin_attention">NOTA: En el casa que no pueda asistir en ese horario de igual forma cominicarse con la administración y se cordinara horario diferente</string>
    <string name="note2_assistant_attention">El horario por parte de asistente de administración : Lunes a Viernes de 8:00 am a 01:00 pm y de 02:00pm a 5:00 pm, Sabados de 8:00 am a 11:00 am</string>
    <string name="schedule">Horario</string>
    <string name="parking">Parqueadero</string>
    <string name="schedule_parking">Lunes a Domingo de 7 A.M. a 10 P.M. </string>
    <string name="time">Tiempo</string>
    <string name="time_use_parking">2 horas Máximo</string>
    <string name="number_parking_moto">25</string>
    <string name="number_parking_car">20</string>
    <string name="count_parking_moto"># Motos</string>
    <string name="count_parking_car"># Carros</string>
    <string name="note">Nota</string>
    <string name="whatsap">Whatsapp</string>
    <string name="email_greeting">Buenos Dias</string>
    <string name="pqr_general_title">PQR Generales</string>
    <string name="pqr_billing_title">PQR Facturación</string>
    <string name="doc_files_title">Documentos</string>
    <string name="url_website">https://direcciontorressan.wixsite.com/my-site</string>
    <string name="url_app">https://urtss.japl.dev</string>
    <string name="there_arent_any_documents_to_show">No hay documentos para mostrar</string>
    <string name="download_file_name">Descargando %s</string>
    <string name="create_date">Fecha Creación Archivo: </string>
    <string name="version_file">Versión del Archivo: </string>
    <string name="file_type">Tipo de Archivo: </string>
    <string name="name_file">Nombre Archivo: </string>
    <string name="description_file">Descripción:</string>
    <string name="description_folder_documents">
        En este espacion podra encontrar la información relacionadas a los documentos y otros anexos sobre el manejo de la unidad residencial torres de san sebastian

    </string>
    <string name="no_network_connection">Esta funcionalidad solo funciona con acceso a internet, conectese a una red de WiFi o activa los datos en el mobile</string>
    <string name="parking_information">
        <![CDATA[
        <p>
        Antes de cumplir las 2 horas se deberá retirar el vehículo del parqueadero, para volver a ingresar deben haber pasado 2 horas o más para poder utilizar de nuevo el servicio.
        </p><br/><p>
        <b>Después de las 10 P.M.</b> no debe permanecer ningún vehículo en el parqueadero.
        </p><p>
        El tiempo es para visitantes, inquilinos y propietarios sin ningún tipo de exclusion.
        </p><br/><p>
        Este tiempo aplica para <b>carros como motos</b>.
        </p><br/><p>
        Recuerde cumplir con los limites de velocidad en la unidad, recuerde que hay niños en la zona.
        </p><br/><p>
        <b>Si incumple el tiempo estimado de permanencia será multado.</b>
        </p>
        ]]>
    </string>
    <string name="count_ambulance">Ambulancia</string>
    <string name="num_ambulance">1</string>
    <string name="administration_pay">Forma de Pago de Administración</string>
    <string name="dataphone_pay">Pago por Datafono</string>
    <string name="webpage_pay">Pago por Plataforma de Pagos</string>
    <string name="account_number">Número de cuenta</string>
    <string name="service_code">Código del Servicio</string>
    <string name="text_link_page">Haz click aquí</string>
    <string name="link_page">https://www.pagosvirtualesavvillas.com.co/personal/pagos/</string>
    <string name="num_service_code">4457</string>
    <string name="num_account_number">514 158 047</string>
    <string name="speed_parking">Velocidad vehiculos en Parqueadero</string>
    <string name="number_speed_parking">10 km/h</string>
    <string name="pet_ownership">Tenencia de Mascotas</string>
    <string name="about_by">Acerca de</string>
    <string name="web_ur">Página Web de la Unidad</string>
    <string name="web_app">Página Web de la App</string>
    <string name="resume_asamble_2022">Resumen Asamblea 2022</string>
    <string name="info_coeficiente">Coeficiente Participación\n\n¿Que es el coeficiente?\n Corresponde al área privada de cada bien de dominio particular, estos son calculados por el grupo constructor y plasmado en el REGLAMENTO DE PROPIEDAD HORIZONTAL.\n\n ¿Cual es el deber ser?\n Se debe facturar según la última reforma de REGLAMENTO DE PROPIEDAD HORIZONTAL - ESCRITURA 3018 DEL 30 DICIEMBRE DE 2003</string>
    <string name="info_presupuesto">Presupuesto 2022\n\nAprobado el presupuesto para el año 2022 con un incremento del 10.07%, retroactivo a enero de 2022.\n\nEste aplicará del siguiente modo:\nComo en enero de 2022 se ajusto el presupuesto con el IPC solo se factura la diferencia, es decir, \n10.07 - 5.62 = 4.45%\n este sería el ajuste retroactivo a enero de 2022\nEl retroactivo se facturará en el mes de abril, mayo y junio 2022.</string>
    <string name="info_cuota_extraordinaria">Cuota Extraordinaria\n\nAprobada cuota extraordinaria por un valor de $333\'759.536, diferido a 6 cuotas según el coeficiente de participación de cada bien privado, para la puesta a punto y reforma de ascensores buscando la certificación de transporte vertical NTC 5926-1\n\nEl monto aprobado es dividido por los 780 bienes privados según el coeficiente de participación.\nSerá diferido a 6 cuotas que se cobran entre el mes de abril y septiembre del año 2022.</string>
    <string name="info_concejo_2022">Consejo de Administración\n\nPrincipal: Maria Cano - Suplente: María Gomez\nPrincipal: Rebeca Roa - Suplente: Silvia Ruíz\nPrincipal: Julieth Gomez - Suplente: Margarita Quiroz\nPrincipal: Yanneth Correa - Suplente: Elianan Acosta\nPrincipal: Guillermo Londoño - Suplente: Claudia Ramirez</string>
    <string name="info_comite_convivencia">Comite de Convivencia\n\nMaria Amparo\nElla será apoyada y complementada por el concejo de administración.</string>
    <string name="representante_legal">Representante Legal: Julio Cesar Loaiza</string>
    <string name="contadora_publica">Contadora Pública: Carmen Noreña</string>
    <string name="revisor_fiscal">Revisor Fiscal: Claudia Martha Niño</string>
    <string name="team">Equipo de Trabajo 2024</string>
</resources>