<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_assistant_ind_24"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_parking"
            android:icon="@drawable/ic_baseline_local_parking_24"
            android:title="@string/menu_parking" />

        <item
            android:id="@+id/nav_admin_pay"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_admin_pay" />
        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/ic_baseline_complains"
            android:title="@string/menu_complaints" />
        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_baseline_suggest"
            android:title="@string/menu_suggestion" />

    </group>
</menu>