<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ui.information.InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resumeAsamblea2022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resume_asamble_2022"
                android:textAlignment="center"
                android:textColor="@color/blue_principal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvCoeficiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/info_coeficiente" />

            <TextView
                android:id="@+id/tvPresupuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/info_presupuesto" />

            <TextView
                android:id="@+id/tvCuotaExtraordinaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/info_cuota_extraordinaria" />

            <TextView
                android:id="@+id/tvTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/team"
                android:textAlignment="center"
                android:textColor="@color/blue_principal"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider14"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/representante_legal" />

            <TextView
                android:id="@+id/tvContadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contadora_publica" />

            <TextView
                android:id="@+id/tvRevisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revisor_fiscal" />

            <TextView
                android:id="@+id/tvConcejo2022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:text="@string/info_concejo_2022" />

            <TextView
                android:id="@+id/tvComiteConvivencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/info_comite_convivencia" />

            <WebView
                android:id="@+id/webViewInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>