<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.location.LocationFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/textUnitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unitName"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textNeighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnMaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_location_on_24"

                />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>